--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react-youtube": "https://aistudiocdn.com/react-youtube@^10.1.0"
   }
 }
 </script>
