--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-youtube": "https://aistudiocdn.com/react-youtube@^10.1.0"
+    "react-youtube": "https://aistudiocdn.com/react-youtube@^10.1.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
   }
 }
 </script>
