feat: Upgrade to Vite and update dependencies
Updates the project to use Vite as the build tool and incorporates the latest versions of React and related plugins. This change simplifies the build process and ensures compatibility with newer development workflows.

Also updates CDN paths for dependencies to align with the new Vite setup.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desafio dos 7 dias</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -38,13 +38,15 @@
     "firebase/app": "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
